# civictech-vpass

./: .dockerignore  .env.example  .gitignore  .sops.yaml  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  cloudbuild.yaml  devenv.nix  docker-compose.yml
docs/: user-flows.md
migrations/: 20251019221635_add_vcuid_to_card_issuers.sql  20251019222814_add_wallet_qr_data_to_cards.sql  20251019224853_create_wallet_qr_codes_table.sql  20251020000001_create_initial_schema.sql  20251025000001_remove_unused_qr_fields.sql  20251026000001_add_card_status_and_expiration.sql  20251026000002_add_issuer_verification_config.sql  20251026000003_fix_oauth_sessions_unique.sql  20251026000004_replace_is_primary_with_deleted_at.sql  20251026000005_add_deleted_at_column.sql  20251026010001_create_events.sql  20251026010002_create_verification_events.sql  20251026010003_create_verification_sessions.sql  20251026010004_consolidated_fixes.sql  20251101000000_make_channel_id_unique_only_for_active.sql  20251110000001_merge_wallet_qr_to_cards.sql  20251110000002_drop_verification_sessions.sql  20251124000001_add_verifier_ref_to_events.sql
scripts/: create_test_event.sql  decrypt-env.sh
secrets/: README.md  prod.env.enc
specs/001-channel-membership-verification/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-channel-card-verification/: spec.md
specs/003-card-lifecycle-automation/: spec.md
src/: config.rs  error.rs  lib.rs  main.rs
src/api/: auth.rs  (+6 more)
templates/: base.html  claim_card.html  home.html  oauth_callback.html  verify_card.html
(+66 files in other folders)
