[package]
name = "vpass"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# OAuth & HTTP client
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["json"] }

# QR code generation
qrcode = { version = "0.14", features = ["svg"] }
image = "0.24"

# Session management
tower-sessions = "0.12"
tower-sessions-sqlx-store = { version = "0.12", features = ["postgres"] }

# Cron scheduler
tokio-cron-scheduler = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Template engine
askama = "0.12"
askama_axum = "0.4"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
dotenvy = "0.15"
secrecy = { version = "0.8", features = ["serde"] }

# Encryption
ring = "0.17"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
url = "2.5"
time = "0.3"
base64 = "0.22"
html-escape = "0.2"

[dev-dependencies]
# Testing
wiremock = "0.6"
